# dvtapp

./: Dockerfile  LICENSE  README.md  pyproject.toml
cf/: main.py
dvtapp/: main.py  main_v2.py  manage_table.py  schemafield_from_value.py
